--- a/roles/homeassistant/templates/docker-compose.yml.j2
+++ b/roles/homeassistant/templates/docker-compose.yml.j2
@@ -8,7 +8,7 @@ services:
     volumes:
       - "{{ ha_config_dir }}:/config"
       - "/etc/localtime:/etc/localtime:ro"
-      - "/mnt/backup:/backup"
+      - "/mnt/backup:/config/backups"
 {% if ha_network_mode | default('host') == 'host' %}
     network_mode: "host"
 {% else %}
