--- a/roles/homeassistant/templates/docker-compose.yml.j2
+++ b/roles/homeassistant/templates/docker-compose.yml.j2
@@ -1,7 +1,6 @@
 services:
   {{ ha_container_name }}:
-    # TODO: REVERT AFTER TEST - original: ghcr.io/home-assistant/home-assistant:{{ ha_effective_version }}
-    image: "ghcr.io/home-assistant/home-assistant:FAKE-TAG-TEST-99999"
+    image: "ghcr.io/home-assistant/home-assistant:{{ ha_effective_version }}"
     container_name: "{{ ha_container_name }}"
     user: "{{ runtime_uid }}:{{ runtime_gid }}"
     privileged: true
